2009-12-25  Benjamin Mack  <benni@typo3.org>

	* Fixed bug #5260: Function linkWrapFile() in file class.file_list.inc uses wrong PATH prefix

2009-12-21  Benjamin Mack  <benni@typo3.org>

        * Fixed bug #12505: JSMENU's showActive is broken (Thanks to Joerg Wagner)

2009-12-19  Xavier Perseguers  <typo3@perseguers.ch>

	* Fixed bug #13064: Deprecated function spliti for PHP5.3

2009-12-13  Xavier Perseguers  <typo3@perseguers.ch>

	* Fixed bug #12072: Permanent login checkbox is not shown as expected
	* Fixed bug #13021: Mistyping prevents the CSV-export of the _PATH_field in List-View (thanks to Mathias Gisch)

2009-12-11  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #12782: htmlArea RTE: Editing a link title or target with Firefox 3 sometimes simply unlinks the link

2009-11-30  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #12467: TYPO3 Inline User Manual is broken

2009-11-25  Oliver Hader  <oliver@typo3.org>

	* Follow-up to bugfix #12581: Use FILTER_FLAG_SCHEME_REQUIRED constant in t3lib_div::isValidUrl()

2009-11-24  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #12581: Pagetree frame shows HTTP 404 error

2009-11-23  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #12500: Object does not support method calls - PHP 5.3 (thanks to Dan Osipov)

2009-11-20  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #12684: htmlArea RTE: Repeated character / backspacing is slow in Firefox

2009-11-19  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #12677: htmlArea RTE: Incorrect cursor position after backspace/delete in Firefox

2009-11-17  Rupert Germann  <rupi@gmx.li>

	* Fixed bug #11937: Do not show PHP 5.3 E_DEPRECATED messages on productive systems

2009-11-16  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #12622: htmlArea RTE: Incorrect behaviour of last item of list in gecko browsers

2009-11-15  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #12597: htmlArea RTE: cursor position is not restored by undo/redo operations in Opera