@@ -1,3 +1,7 @@
+2010-01-04  Benjamin Mack  <benni@typo3.org>
+
+	* Fixed bug #12506: JSMENU does not respect mount point overlays (Thanks to Joerg Wagner)
+
 2009-12-25  Benjamin Mack  <benni@typo3.org>
 
 	* Fixed bug #5260: Function linkWrapFile() in file class.file_list.inc uses wrong PATH prefix
